[gd_scene load_steps=2 format=3 uid="uid://dtxryjmrhpjdm"]

[ext_resource type="Script" uid="uid://dtv7vgqd0pl3g" path="res://scripts/info_panel.gd" id="1_nkgev"]

[node name="InfoPanel" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -579.5
offset_top = -305.5
offset_right = 579.5
offset_bottom = 305.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nkgev")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Character Info"

[node name="XButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = " X "

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="IconTexture" type="TextureRect" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
stretch_mode = 2

[node name="InfoLabel" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Name: 
Stats:"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/XButton" to="." method="_on_x_button_pressed"]
